--- a/config/polybar/theme/aaa/config
+++ b/config/polybar/theme/aaa/config
@@ -7,7 +7,7 @@ fg = #FFFFFF
 [bar/main]
 modules-left = i3
 modules-center = date
-modules-right = cpu memory
+modules-right = cpu pulseaudio
 width = 100%
 height = 28
 background = ${colors.bg}
@@ -30,10 +30,17 @@ interval = 1
 date = %Y-%m-%d %T
 
 
+[module/pulseaudio]
+type = internal/pulseaudio
+format-volume = <ramp-volume> <label-volume>
+label-muted = ﱝ
+ramp-volume-0 = 奄
+ramp-volume-1 = 奔
+ramp-volume-2 = 墳
+click-right = pavucontrol
 
 [module/cpu]
 type = internal/cpu
 format-padding = 1
 interval = 1
 format-prefix = " "
-
