--- a/config/polybar/theme/aaa/config
+++ b/config/polybar/theme/aaa/config
@@ -7,7 +7,7 @@ fg = #FFFFFF
 [bar/main]
 modules-left = i3
 modules-center = date
-modules-right = cpu pulseaudio
+modules-right = battery cpu pulseaudio
 width = 100%
 height = 28
 background = ${colors.bg}
@@ -44,3 +44,31 @@ type = internal/cpu
 format-padding = 1
 interval = 1
 format-prefix = " "
+
+[module/battery]
+type = internal/battery
+full-at = 99
+battery = BAT1
+adapter = ACAD
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+format-full = <ramp-capacity> <label-full>
+format-low = <ramp-capacity> <label-low>
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
+ramp-capacity-10 = 
