--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ monitor=HDMI-A-1,preferred,auto,auto
 # Set programs that you use
 $terminal = alacritty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = wofi -b --show drun
 
 
 #################
@@ -42,7 +42,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
+exec-once = waybar & hyprpaper & fcitx5
 
 
 #############################
@@ -181,7 +181,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, M, exit,
 # bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -237,7 +237,7 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 # Screenshot a monitor
 bind = , PRINT, exec, hyprshot -m output
 # Screenshot a region
-bind = $shiftMod, S, exec, hyprshot -m region
+bind = $mainMod SHIFT, S, exec, hyprshot -m region
 
 
 ##############################
