--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,8 +28,8 @@ monitor=HDMI-A-1,preferred,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
-$menu = wofi -b --show drun
+$fileManager = thunar
+$menu = rofi -show drun
 
 
 #################
@@ -64,9 +64,9 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
-    border_size = 2
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -83,7 +83,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -182,9 +182,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, E, exec, rofi -show power
+# bind = $mainMod, M, exit,
 # bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
