--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -183,7 +183,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exec, rofi -show power
-# bind = $mainMod, M, exit,
+bind = $mainMod, M, exit,
 # bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, D, exec, $menu
